--- a/Genetic Cars/App.config
+++ b/Genetic Cars/App.config
@@ -3,4 +3,38 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821" />
+  </configSections>
+
+  <!-- Log4net Logging Setup -->
+  <log4net>
+    <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file value="logfile.txt" />
+      <appendToFile value="false" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="-1" />
+      <maximumFileSize value="10MB" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date{ABSOLUTE} [%thread] %level %logger - %message%newline" />
+      </layout>      
+    </appender>
+    
+    <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %level %logger - %message%newline"/>
+      </layout>
+      <filter type="log4net.Filter.LevelRangeFilter">
+        <levelMin value="WARN" />
+        <levelMax value="FATAL" />
+      </filter>
+    </appender>
+
+    <root>
+      <level value="DEBUG"/>
+      <appender-ref ref="RollingLogFileAppender"/>
+      <appender-ref ref="ConsoleAppender"/>
+    </root>
+  </log4net>
 </configuration>
