--- a/Genetic Cars/Genetic Cars.csproj
+++ b/Genetic Cars/Genetic Cars.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Car.cs" />
     <Compile Include="FarseerDebugView.cs" />
     <Compile Include="MainWindow.cs">
       <SubType>Form</SubType>
