Mostly completed car simulation.  Moved car properties to settings file.

--- a/Genetic Cars/App.config
+++ b/Genetic Cars/App.config
@@ -1,12 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net"/>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Genetic_Cars.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
     
-  <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821" />
-  </configSections>
 
   <!-- Log4net Logging Setup -->
   <log4net>
@@ -37,4 +40,38 @@
       <appender-ref ref="ConsoleAppender"/>
     </root>
   </log4net>
+  <userSettings>
+    <Genetic_Cars.Properties.Settings>
+      <setting name="MinBodyPointDistance" serializeAs="String">
+        <value>0.5</value>
+      </setting>
+      <setting name="MaxBodyPointDistance" serializeAs="String">
+        <value>2</value>
+      </setting>
+      <setting name="MinBodyDensity" serializeAs="String">
+        <value>0.1</value>
+      </setting>
+      <setting name="MaxBodyDensity" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="MinWheelRadius" serializeAs="String">
+        <value>0.25</value>
+      </setting>
+      <setting name="MaxWheelRadius" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="MinWheelDensity" serializeAs="String">
+        <value>0.1</value>
+      </setting>
+      <setting name="MaxWheelDensity" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="NumBodyPoints" serializeAs="String">
+        <value>8</value>
+      </setting>
+      <setting name="NumWheels" serializeAs="String">
+        <value>2</value>
+      </setting>
+    </Genetic_Cars.Properties.Settings>
+  </userSettings>
 </configuration>
