Finalized (mostly?) car generation

--- a/Genetic Cars/App.config
+++ b/Genetic Cars/App.config
@@ -72,6 +72,21 @@
       <setting name="NumWheels" serializeAs="String">
         <value>2</value>
       </setting>
+      <setting name="MinWheelSpeed" serializeAs="String">
+        <value>180</value>
+      </setting>
+      <setting name="MaxWheelSpeed" serializeAs="String">
+        <value>1440</value>
+      </setting>
+      <setting name="MinWheelTorque" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="MaxWheelTorque" serializeAs="String">
+        <value>50</value>
+      </setting>
+      <setting name="NumTrackPieces" serializeAs="String">
+        <value>100</value>
+      </setting>
     </Genetic_Cars.Properties.Settings>
   </userSettings>
 </configuration>
