--- a/Genetic Cars/App.config
+++ b/Genetic Cars/App.config
@@ -20,13 +20,13 @@
       <maxSizeRollBackups value="10" />
       <maximumFileSize value="10MB" />
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date{ABSOLUTE} [%thread] %level %logger - %message%newline" />
+        <conversionPattern value="%date{ABSOLUTE} %level %logger{1} - %message%newline" />
       </layout>      
     </appender>
     
     <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %level %logger - %message%newline"/>
+        <conversionPattern value="%date %level %logger{1} - %message%newline"/>
       </layout>
       <filter type="log4net.Filter.LevelRangeFilter">
         <levelMin value="WARN" />
