--- a/Genetic Cars/Genetic Cars.csproj
+++ b/Genetic Cars/Genetic Cars.csproj
@@ -62,7 +62,7 @@
   <ItemGroup>
     <Compile Include="Car.cs" />
     <Compile Include="CarDef.cs" />
-    <Compile Include="IDynamicObject.cs" />
+    <Compile Include="IPhysicsManager.cs" />
     <Compile Include="FarseerDebugView.cs" />
     <Compile Include="IDrawable.cs" />
     <Compile Include="MainWindow.cs">
