Started GUI work. Added pausing, changing seeds, changing mutation rate.

--- a/Genetic Cars/App.config
+++ b/Genetic Cars/App.config
@@ -43,7 +43,7 @@
   <userSettings>
     <Genetic_Cars.Properties.Settings>
       <setting name="MinBodyPointDistance" serializeAs="String">
-        <value>0.1</value>
+        <value>0.5</value>
       </setting>
       <setting name="MaxBodyPointDistance" serializeAs="String">
         <value>2</value>
@@ -86,6 +86,12 @@
       </setting>
       <setting name="NumTrackPieces" serializeAs="String">
         <value>100</value>
+      </setting>
+      <setting name="PopulationSize" serializeAs="String">
+        <value>25</value>
+      </setting>
+      <setting name="DefaultMutationRate" serializeAs="String">
+        <value>0.1</value>
       </setting>
     </Genetic_Cars.Properties.Settings>
   </userSettings>
