Refactored IPhysicsManager -> PhysicsManager Fixed events in MainWindow Added Population class Standardized usage of XNA Vector2 for all non graphics positions

--- a/Genetic Cars/Genetic Cars.csproj
+++ b/Genetic Cars/Genetic Cars.csproj
@@ -63,7 +63,8 @@
     <Compile Include="Car\Entity.cs" />
     <Compile Include="Car\Definition.cs" />
     <Compile Include="Car\Phenotype.cs" />
-    <Compile Include="IPhysicsManager.cs" />
+    <Compile Include="Car\Population.cs" />
+    <Compile Include="PhysicsManager.cs" />
     <Compile Include="FarseerDebugView.cs" />
     <Compile Include="IDrawable.cs" />
     <Compile Include="MainWindow.cs">
