Many gui updates

--- a/Genetic Cars/App.config
+++ b/Genetic Cars/App.config
@@ -93,6 +93,9 @@
       <setting name="DefaultMutationRate" serializeAs="String">
         <value>0.1</value>
       </setting>
+      <setting name="DefaultNumClones" serializeAs="String">
+        <value>2</value>
+      </setting>
     </Genetic_Cars.Properties.Settings>
   </userSettings>
 </configuration>
