--- a/Genetic Cars/Properties/Settings.settings
+++ b/Genetic Cars/Properties/Settings.settings
@@ -53,5 +53,8 @@
     <Setting Name="DefaultMutationRate" Type="System.Single" Scope="User">
       <Value Profile="(Default)">0.1</Value>
     </Setting>
+    <Setting Name="DefaultNumClones" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">2</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
