Improved settings handling

--- a/Genetic Cars/App.config
+++ b/Genetic Cars/App.config
@@ -5,6 +5,9 @@
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="Genetic_Cars.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Genetic_Cars.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
@@ -41,6 +44,16 @@
     </root>
   </log4net>
   <userSettings>
+    <Genetic_Cars.Properties.Settings>
+      <setting name="MutationRate" serializeAs="String">
+        <value>0.25</value>
+      </setting>
+      <setting name="NumClones" serializeAs="String">
+        <value>2</value>
+      </setting>
+    </Genetic_Cars.Properties.Settings>
+  </userSettings>
+  <applicationSettings>
     <Genetic_Cars.Properties.Settings>
       <setting name="MinBodyPointDistance" serializeAs="String">
         <value>0.5</value>
@@ -90,12 +103,6 @@
       <setting name="PopulationSize" serializeAs="String">
         <value>25</value>
       </setting>
-      <setting name="DefaultMutationRate" serializeAs="String">
-        <value>0.1</value>
-      </setting>
-      <setting name="DefaultNumClones" serializeAs="String">
-        <value>2</value>
-      </setting>
     </Genetic_Cars.Properties.Settings>
-  </userSettings>
+  </applicationSettings>
 </configuration>
