Added option for random cars in the population

--- a/Genetic Cars/App.config
+++ b/Genetic Cars/App.config
@@ -51,6 +51,9 @@
       <setting name="NumClones" serializeAs="String">
         <value>2</value>
       </setting>
+      <setting name="NumRandom" serializeAs="String">
+        <value>0</value>
+      </setting>
     </Genetic_Cars.Properties.Settings>
   </userSettings>
   <applicationSettings>
