--- a/Genetic Cars/Properties/Settings.settings
+++ b/Genetic Cars/Properties/Settings.settings
@@ -56,5 +56,8 @@
     <Setting Name="NumClones" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">2</Value>
     </Setting>
+    <Setting Name="NumRandom" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
