Updated commenting and documentation

--- a/Genetic Cars/App.config
+++ b/Genetic Cars/App.config
@@ -106,6 +106,9 @@
       <setting name="PopulationSize" serializeAs="String">
         <value>25</value>
       </setting>
+      <setting name="CarLowSpeedThreshold" serializeAs="String">
+        <value>0.25</value>
+      </setting>
     </Genetic_Cars.Properties.Settings>
   </applicationSettings>
 </configuration>
