--- a/Genetic Cars/packages.config
+++ b/Genetic Cars/packages.config
@@ -3,5 +3,6 @@
   <package id="Baseclass.Contrib.Nuget.Output" version="1.0.7" targetFramework="net45" />
   <package id="FarseerPhysics" version="3.5.0" targetFramework="net45" />
   <package id="log4net" version="2.0.3" targetFramework="net45" />
+  <package id="NLua" version="1.3.2.1" targetFramework="net45" />
   <package id="SFML.Net" version="2.1.5" targetFramework="net45" />
 </packages>
