--- a/Genetic Cars/App.config
+++ b/Genetic Cars/App.config
@@ -49,7 +49,7 @@
         <value>0.25</value>
       </setting>
       <setting name="NumClones" serializeAs="String">
-        <value>2</value>
+        <value>1</value>
       </setting>
       <setting name="NumRandom" serializeAs="String">
         <value>0</value>
@@ -62,25 +62,25 @@
         <value>0.5</value>
       </setting>
       <setting name="MaxBodyPointDistance" serializeAs="String">
-        <value>2</value>
+        <value>2.5</value>
       </setting>
       <setting name="MinBodyDensity" serializeAs="String">
-        <value>0.1</value>
+        <value>1</value>
       </setting>
       <setting name="MaxBodyDensity" serializeAs="String">
-        <value>1</value>
+        <value>15</value>
       </setting>
       <setting name="MinWheelRadius" serializeAs="String">
-        <value>0.15</value>
+        <value>0.2</value>
       </setting>
       <setting name="MaxWheelRadius" serializeAs="String">
-        <value>0.75</value>
+        <value>1</value>
       </setting>
       <setting name="MinWheelDensity" serializeAs="String">
-        <value>0.1</value>
+        <value>1</value>
       </setting>
       <setting name="MaxWheelDensity" serializeAs="String">
-        <value>1</value>
+        <value>10</value>
       </setting>
       <setting name="NumBodyPoints" serializeAs="String">
         <value>16</value>
@@ -95,19 +95,28 @@
         <value>1440</value>
       </setting>
       <setting name="MinWheelTorque" serializeAs="String">
-        <value>0.5</value>
-      </setting>
-      <setting name="MaxWheelTorque" serializeAs="String">
         <value>10</value>
       </setting>
+      <setting name="MaxWheelTorque" serializeAs="String">
+        <value>50</value>
+      </setting>
       <setting name="NumTrackPieces" serializeAs="String">
-        <value>100</value>
+        <value>200</value>
       </setting>
       <setting name="PopulationSize" serializeAs="String">
         <value>25</value>
       </setting>
       <setting name="CarLowSpeedThreshold" serializeAs="String">
-        <value>0.25</value>
+        <value>0.3</value>
+      </setting>
+      <setting name="BreedingPopulationPercent" serializeAs="String">
+        <value>0.5</value>
+      </setting>
+      <setting name="MinTrackAngle" serializeAs="String">
+        <value>10</value>
+      </setting>
+      <setting name="MaxTrackAngle" serializeAs="String">
+        <value>50</value>
       </setting>
     </Genetic_Cars.Properties.Settings>
   </applicationSettings>
