Included process id in logging and window info

--- a/Genetic Cars/App.config
+++ b/Genetic Cars/App.config
@@ -17,7 +17,9 @@
   <!-- Log4net Logging Setup -->
   <log4net>
     <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="logfile.txt" />
+      <file type="log4net.Util.PatternString">
+        <conversionPattern value="log_pid_%processid.log" />
+      </file>
       <appendToFile value="false" />
       <rollingStyle value="Size" />
       <maxSizeRollBackups value="10" />
